--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@vuikit/icons": "^0.8.1",
     "@vuikit/theme": "^0.8.1",
+    "axios": "^0.18.0",
     "core-js": "^2.6.5",
     "echarts": "^4.2.1",
     "vue": "^2.6.10",
