--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,20 +8,17 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "@vuikit/icons": "^0.8.1",
-    "@vuikit/theme": "^0.8.1",
     "axios": "^0.18.0",
     "bulma": "^0.7.5",
     "core-js": "^2.6.5",
     "echarts": "^4.2.1",
     "leaflet": "^1.5.1",
     "leaflet.icon.glyph": "^0.2.1",
-    "uikit": "^3.1.5",
+    "numeral": "^2.0.6",
     "vue": "^2.6.10",
     "vue-echarts": "^4.0.3",
     "vue2-leaflet": "^2.1.1",
-    "vuejs-logger": "1.5.3",
-    "vuikit": "^0.8.10"
+    "vuejs-logger": "1.5.3"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.7.0",
