--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "numeral": "^2.0.6",
     "vue": "^2.6.10",
     "vue-echarts": "^4.0.3",
+    "vue-multiselect": "^2.1.6",
     "vue2-leaflet": "^2.1.1",
     "vuejs-logger": "1.5.3"
   },
